force-app/main/default/objects/Appraiser__c/Appraiser__c.object-meta.xml
<CustomObject>
    <label>Appraiser</label>
    <nameField>
        <label>Appraiser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appraisers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>