force-app/main/default/objects/Appraiser__c/fields/AMC__c.field-meta.xml
<CustomField>
    <fullName>AMC__c</fullName>
    <label>AMC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appraisal Nation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>