force-app/main/default/objects/Appraiser__c/fields/Region_Covered__c.field-meta.xml
<CustomField>
    <fullName>Region_Covered__c</fullName>
    <label>Region Covered</label>
    <length>100</length>
    <type>Text</type>
</CustomField>